Update relationship between models

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,11 +1,11 @@
 <section class="bg-white items-center justify-center ">
   <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16 lg:px-12">
-    <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl ">Welcome
-      to Stores Data Collection App.</h1>
+    <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl ">
+      Welcome to Stores Data Collection App.</h1>
     <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 xl:px-48 dark:text-gray-400">A web app for
       collecting stores data, add taxes and pay taxes. Watch video below to know to get started. <span
         class="text-blue-600">
-        Email: admin_001@test.com, Password: password
+        Email: admin1@test.com, Password: secrete
       </span></p>
 
     <div class="aspect-w-16 aspect-h-9">
