--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -93,7 +93,7 @@
       font-medium leading-5 text-white duration-150 ease-in-out" %>
     </form>
     <div class="text-center mt-4 font-weight-light">
-      Already have an account? <%= link_to "Sign In", new_user_session_path,
+      Already have an account? <%= link_to "Sign In", new_author_session_path,
       class: "transition focus:outline-none mt-2 text-center text-sm
       font-medium text-bb-purple duration-150 ease-in-out focus:underline
       text-center" %>
