--- a/app/views/payments/_payment.html.erb
+++ b/app/views/payments/_payment.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= dom_id payment %>">
   <p class="my-5">
     <strong class="block font-medium mb-1">Collected By:</strong>
-    <%= payment.user.name %>
+    <%= payment.author.name %>
   </p>
 
   <p class="my-5">
