--- a/app/views/stores/_store.html.erb
+++ b/app/views/stores/_store.html.erb
@@ -6,7 +6,7 @@
 
   <p class="my-5">
     <strong class="block font-medium mb-1">Collected By:</strong>
-    <%= store.user.name %>
+    <%= store.author.name %>
   </p>
 
   <p class="my-5">
