--- a/app/views/taxes/_tax.html.erb
+++ b/app/views/taxes/_tax.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= dom_id tax %>">
   <p class="my-5">
     <strong class="block font-medium mb-1">Entered By:</strong>
-    <%= tax.user.name %>
+    <%= tax.author.name %>
   </p>
 
   <p class="my-5">
