--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -38,10 +38,10 @@
       <div class="mt-6 flex items-center justify-between">
 
         <div class="text-sm leading-5">
-          <%= link_to "Need an account? Sign up", new_user_registration_path, class: "font-medium text-bb-gray-700 hover:text-bb-gray-900 focus:outline-none focus:underline transition ease-in-out duration-150" %>
+          <%= link_to "Need an account? Sign up", new_author_registration_path, class: "font-medium text-bb-gray-700 hover:text-bb-gray-900 focus:outline-none focus:underline transition ease-in-out duration-150" %>
         </div>
          <div class="text-sm leading-5">
-          <%= link_to "Sign in", new_user_session_path, class: "font-medium text-bb-gray-700 hover:text-bb-gray-900 focus:outline-none focus:underline transition ease-in-out duration-150" %>
+          <%= link_to "Sign in", new_author_session_path, class: "font-medium text-bb-gray-700 hover:text-bb-gray-900 focus:outline-none focus:underline transition ease-in-out duration-150" %>
         </div>
       </div>
   </div>
