--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
     <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl ">
       Welcome to Stores Data Collection App.</h1>
     <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 xl:px-48 dark:text-gray-400">A web app for
-      collecting stores data, add taxes and pay taxes. Watch video below to know to get started. <span
+      collecting stores data, add taxes and pay taxes. The Video below provide a getting started guide. <span
         class="text-blue-600">
         Email: admin1@test.com, Password: secrete
       </span></p>
